crates/oxc_angular_compiler/tests/snapshots/integration_test__object_spread_with_pipe.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _c0 = (a0,a1) =>({...a0,val:a1});
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelement(0,"div",0);
    i0.ɵɵpipe(1,"percent");
  }
  if ((rf & 2)) { i0.ɵɵproperty("title",i0.ɵɵpureFunction2(3,_c0,ctx.base,i0.ɵɵpipeBind1(1,
      1,ctx.num))); }
}
